--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,3 +1,11 @@
 
 @import url('./common.css');
 @import url('./general.css');
+@import url('./header.css');
+@import url('./modal-menu.css');
+@import url('./all-categories.css');
+@import url('./support.css');
+@import url('./all-books.css');
+@import url('./shoplist.css');
+@import url('./pop-up.css');
+
