--- a/src/partials/all-categories.html
+++ b/src/partials/all-categories.html
@@ -1,1 +1,5 @@
-<p>Я секция с категориями. Удали меня перед началом работы)</p>
+<section class="section">
+  <div class="container">
+    <p>Я секция с категориями. Удали p перед началом работы)</p>
+  </div>
+</section>
