--- a/src/partials/modal-menu.html
+++ b/src/partials/modal-menu.html
@@ -1,3 +1,8 @@
-<p>
-  Я модальное окно меню хедера в мобайл версии. Удали меня перед началом работы)
-</p>
+<section class="section">
+  <div class="container">
+    <p>
+      Я модальное окно меню хедера в мобайл версии. Удали p перед началом
+      работы)
+    </p>
+  </div>
+</section>
