--- a/src/partials/pop-up.html
+++ b/src/partials/pop-up.html
@@ -1,1 +1,5 @@
-<p>Я книга. Удали меня перед началом работы)</p>
+<section class="section">
+  <div class="container">
+    <p>Я книга. Удали p перед началом работы)</p>
+  </div>
+</section>
