--- a/src/partials/support.html
+++ b/src/partials/support.html
@@ -1,1 +1,5 @@
-<p>Я Суппорт. Удали меня перед началом работы)</p>
+<section class="section">
+  <div class="container">
+    <p>Я Суппорт. Удали p перед началом работы)</p>
+  </div>
+</section>
