--- a/src/partials/all-books.html
+++ b/src/partials/all-books.html
@@ -1,1 +1,5 @@
-<p>Я секция с книгами. Удали меня перед началом работы)</p>
+<section class="section">
+  <div class="container">
+    <p>Я секция с книгами. Удали p перед началом работы)</p>
+  </div>
+</section>
