--- a/src/partials/shoplist.html
+++ b/src/partials/shoplist.html
@@ -1,1 +1,5 @@
-<p>Я корзина с книгами. Удали меня перед началом работы)</p>
+<section class="section">
+  <div class="container">
+    <p>Я корзина с книгами. Удали p перед началом работы)</p>
+  </div>
+</section>
