add api and render categories

--- a/src/partials/all-categories.html
+++ b/src/partials/all-categories.html
@@ -1,5 +1,5 @@
 <section class="section">
   <div class="container">
-    <p>Я секция с категориями. Удали p перед началом работы)</p>
+    <div class="js-category-block"></div>
   </div>
 </section>
