header with switcher

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -24,16 +24,12 @@
       </div>
 
       <li class="nav-item switch-burger">
-        <img src="./images/switcher-light.svg" width="40" height="24" alt="" />
+        <label class="switch">
+          <input type="checkbox" />
+          <span class="slider round"></span>
+        </label>
         <svg class="nav-burger" width="28" height="28">
           <use href="./images/sprite.svg#icon-burger"></use>
-          <!-- <img
-            class=""
-            src="./images/switcher-light.svg"
-            width="40"
-            height="24"
-            alt=""
-          /> -->
         </svg>
       </li>
     </ul>
