--- a/src/partials/all-categories.html
+++ b/src/partials/all-categories.html
@@ -1,5 +1,5 @@
 <section class="section">
-  <div class="container">
+  <div class="">
     <div class="js-category-block"></div>
   </div>
 </section>
