add render books

--- a/src/partials/all-books.html
+++ b/src/partials/all-books.html
@@ -1,5 +1,5 @@
 <section class="section">
   <div class="container">
-    <p>Я секция с книгами. Удали p перед началом работы)</p>
+    <div class="js-books"></div>
   </div>
 </section>
