--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,4 +1,4 @@
-<header class="header container">
+<header class="header">
   <nav class="nav">
     <ul class="nav-list nav-container">
       <li class="nav-item">
@@ -28,9 +28,18 @@
           <input type="checkbox" />
           <span class="slider round"></span>
         </label>
-        <svg class="nav-burger" width="28" height="28">
+        <svg class="tab-hidden" width="28" height="28">
           <use href="./images/sprite.svg#icon-burger"></use>
         </svg>
+      </li>
+      <li class="mob-hidden">
+        <div class="user-acc">
+          <img class="user-img" src="./images/user.png" alt="user" />
+          <p class="user-name">Stephen</p>
+          <svg class="" width="23" height="26">
+            <use href="./images/sprite.svg#icon-caret-down"></use>
+          </svg>
+        </div>
       </li>
     </ul>
   </nav>
