add loader css rules

--- a/src/partials/shoplist.html
+++ b/src/partials/shoplist.html
@@ -1,5 +1,5 @@
 <section class="section">
-  <div class="container">
+  <div class="">
     <p>Я корзина с книгами. Удали p перед началом работы)</p>
   </div>
 </section>
