--- a/src/css/general.css
+++ b/src/css/general.css
@@ -5,7 +5,8 @@
 .container {
   padding-inline: 20px;
   margin-inline: auto;
-  background-color: aqua;
+  outline: 1px solid tomato;
+
 }
 
 @media screen and (min-width: 375px) {
