--- a/src/partials/all-categories.html
+++ b/src/partials/all-categories.html
@@ -1,5 +1,6 @@
 <section class="section">
   <div class="">
+    <span class="loader"></span>
     <div class="js-category-block"></div>
   </div>
 </section>
