seems like header finished

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -38,14 +38,18 @@
 }
 
 .nav-link:hover,
-.nav-link:focus {
+.nav-link:focus,
+.nav-link.current {
   background: #eac645;
 }
 
 /* temp */
 .main-nav-block {
-  margin-right: 40px;
-  margin-right: 101px;
+  margin-left: 34px;
+  margin-right: 90px;
+}
+.shopping-bag {
+  margin-left: 3px;
 }
 
 @media screen and (min-width: 375px) {
@@ -57,19 +61,22 @@
 @media screen and (min-width: 768px) {
   .nav-container {
     width: 768px;
+    height: 72px;
+    padding: 0 32px;
   }
   .tab-hidden {
     display: none;
-  }
-  .nav-container {
-    height: 72px;
-    padding: 0 32px;
   }
 }
 
 @media screen and (min-width: 1440px) {
   .nav-container {
     width: 1440px;
+    padding: 0 24px;
+  }
+  .main-nav-block {
+    margin-left: 76px;
+    margin-right: 735px;
   }
 }
 
@@ -84,7 +91,7 @@
   position: relative;
   display: inline-block;
   width: 42px;
-  height: 24px;
+  height: 20px;
 }
 
 /* Hide default HTML checkbox */
@@ -102,7 +109,11 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: #ccc;
+  background-image: linear-gradient(
+    to top,
+    rgba(220, 220, 220, 1),
+    rgba(79, 46, 232, 1)
+  );
   -webkit-transition: 0.4s;
   transition: 0.4s;
 }
@@ -110,17 +121,21 @@
 .slider:before {
   position: absolute;
   content: '';
-  height: 18.2px;
-  width: 18.2px;
-  left: 3px;
-  bottom: 3px;
+  height: 18px;
+  width: 18px;
+  left: 2px;
+  bottom: 1px;
   background-color: white;
   -webkit-transition: 0.4s;
   transition: 0.4s;
 }
 
 input:checked + .slider {
-  background-color: #2196f3;
+  background-image: linear-gradient(
+    to top,
+    rgba(104, 104, 104, 1),
+    rgba(79, 46, 232, 1)
+  );
 }
 
 input:focus + .slider {
@@ -128,9 +143,9 @@ input:focus + .slider {
 }
 
 input:checked + .slider:before {
-  -webkit-transform: translateX(18px);
-  -ms-transform: translateX(18px);
-  transform: translateX(18px);
+  -webkit-transform: translateX(20px);
+  -ms-transform: translateX(20px);
+  transform: translateX(20px);
 }
 
 /* Rounded sliders */
@@ -150,6 +165,7 @@ input:checked + .slider:before {
   flex-shrink: 0;
   border-radius: 36px;
   background: #4f2ee8;
+  margin-left: 24px;
 }
 
 .user-img {
