--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,20 +2,24 @@
   <nav class="nav">
     <ul class="nav-list nav-container">
       <li class="nav-item">
-        <svg class="" width="99" height="24">
-          <use href="./images/sprite.svg#icon-logo-light"></use>
-        </svg>
+        <a href="./index.html">
+          <svg class="" width="99" height="24">
+            <use href="./images/sprite.svg#icon-logo-light"></use></svg
+        ></a>
       </li>
 
       <div class="mob-hidden main-nav-block">
         <ul class="site-nav">
           <li class="item">
-            <a class="nav-link current link" href="./index.html">Home</a>
+            <a class="nav-link" href="./index.html" data-action="index">Home</a>
           </li>
           <li class="item">
-            <a class="nav-link link" href="./shopping-list.html"
+            <a
+              class="nav-link"
+              href="./shopping-list.html"
+              data-action="shopping-list"
               >Shopping list
-              <svg class="" width="20" height="20">
+              <svg class="shopping-bag" width="20" height="20">
                 <use href="./images/sprite.svg#icon-shop"></use>
               </svg>
             </a>
