--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -27,13 +27,13 @@
         </ul>
       </div>
 
-      <li class="nav-item switch-burger">
+      <li class="nav-item">
         <label class="switch">
           <input type="checkbox" />
           <span class="slider round"></span>
         </label>
-        <svg class="tab-hidden" width="28" height="28">
-          <use href="./images/sprite.svg#icon-burger"></use>
+        <svg class="tab-hidden ico-burger" width="28" height="28">
+          <use href="./images/sprite.svg#burger"></use>
         </svg>
       </li>
       <li class="mob-hidden">
