--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,4 +1,3 @@
-
 @import url('./common.css');
 @import url('./general.css');
 @import url('./header.css');
@@ -8,4 +7,4 @@
 @import url('./all-books.css');
 @import url('./shoplist.css');
 @import url('./pop-up.css');
-
+@import url('./darkmode-theme.css');
