--- a/src/css/all-categories.css
+++ b/src/css/all-categories.css
@@ -4,26 +4,44 @@
   line-height: 18px;
   letter-spacing: -0.32px;
   margin-bottom: 24px;
+  width: 307px;
 }
 .category-item a:hover,
 .category-item a:focus {
   color: #4f2ee8;
-  font-weight: 700;
+  font-weight: 600;
+  font-size: 14px;
   text-transform: uppercase;
+}
+.js-category-block {
+  width: 335px;
+  height: 228px;
+  overflow-y: scroll;
+  display: flex;
+  flex-direction: column;
 }
 
 /* Mobile 375 */
 @media screen and (min-width: 375px) {
-  .js-category-block {
-    padding: 40px 0px;
-  }
 }
+
 /* Tablet 768*/
 @media screen and (min-width: 768px) {
   .category-item {
     margin-bottom: 32px;
+    width: 309px;
+  }
+  .js-category-block {
+    width: 337px;
+    height: 472px;
   }
 }
-/* DEKSTOP 1440*/
 @media screen and (min-width: 1440px) {
+  .category-item {
+    width: 328px;
+  }
+  .js-category-block {
+    width: 356px;
+    height: 472px;
+  }
 }
