--- a/src/partials/pop-up.html
+++ b/src/partials/pop-up.html
@@ -1,5 +1,31 @@
 <section class="section">
   <div class="container">
-    <p>Я книга. Удали p перед началом работы)</p>
+    <div class="popup-modal-background">
+      <div class="popup-modal">
+        <button class="popup-modal-close-button" type="button">
+          <svg>
+            <use href="../images/sprite.svg#icon-x-close"></use>
+          </svg>
+        </button>
+        <img class="book-image" src="" alt="">
+        <div class="book-information">
+          <h3 class="book-title"></h3>
+          <h4 class="book-author"></h4>
+          <p class="book-description"></p>
+          <div class="book-store-logos">
+            <svg class="amazon-logo">
+              <use href=""></use>
+            </svg>
+            <svg class="second-logo">
+              <use href=""></use>
+            </svg>
+            <svg class="third-logo">
+              <use href=""></use>
+            </svg>
+          </div>
+        </div>
+        <button class="add-to-list-button" type="button">ADD TO SHOPING LIST</button>
+      </div>
+    </div>
   </div>
 </section>
