--- a/src/css/common.css
+++ b/src/css/common.css
@@ -42,7 +42,7 @@ body {
     font-size: 14px;
     font-weight: 400;
     color: #111111;
-    background-color: #D0D0D0;
+    background-color: #F6F6F6;
 }
 
 html {
