--- a/src/partials/pop-up.html
+++ b/src/partials/pop-up.html
@@ -1,6 +1,6 @@
 <section class="section">
   <div class="container">
-    <div class="popup-modal-background">
+    <div class="popup-modal-background hidden">
       <div class="popup-modal">
         <button class="popup-modal-close-button" type="button">
           <svg>
