--- a/src/css/general.css
+++ b/src/css/general.css
@@ -5,7 +5,7 @@
 .container {
   padding-inline: 20px;
   margin-inline: auto;
-  outline: 1px solid tomato;
+  /* outline: 1px solid tomato; */
 
 }
 
