--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -37,13 +37,15 @@
         </svg>
       </li>
       <li class="mob-hidden">
-        <div class="user-acc">
-          <img class="user-img" src="./images/user.png" alt="user" />
-          <p class="user-name">Stephen</p>
+        <button class="user-acc">
+          <svg class="user-icon" width="37" height="37">
+            <use href="./images/sprite.svg#icon-user"></use>
+          </svg>
+          <p class="user-name">User</p>
           <svg class="" width="23" height="26">
             <use href="./images/sprite.svg#icon-caret-down"></use>
           </svg>
-        </div>
+        </button>
       </li>
     </ul>
   </nav>
