--- a/src/css/common.css
+++ b/src/css/common.css
@@ -49,6 +49,9 @@ html {
     scroll-behavior: smooth;
 }
 
+:root{
+    --timing-function: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 .hidden {
     position: absolute;
     white-space: nowrap;
@@ -65,36 +68,34 @@ html {
 .loader {
     width: 48px;
     height: 48px;
+    border: 3px solid #FFF;
+    border-radius: 50%;
     display: inline-block;
     position: relative;
-}
-
-.loader::after,
-.loader::before {
-    content: '';
     box-sizing: border-box;
-    width: 48px;
-    height: 48px;
-    border-radius: 50%;
-    border: 2px solid #FFF;
-    position: absolute;
-    left: 0;
-    top: 0;
-    animation: animloader 2s linear infinite;
+    animation: rotation 1s linear infinite;
 }
 
 .loader::after {
-    animation-delay: 1s;
+    content: '';
+    box-sizing: border-box;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: 56px;
+    height: 56px;
+    border-radius: 50%;
+    border: 3px solid transparent;
+    border-bottom-color: #4F2EE8;
 }
 
-@keyframes animloader {
+@keyframes rotation {
     0% {
-        transform: scale(0);
-        opacity: 1;
+        transform: rotate(0deg);
     }
 
     100% {
-        transform: scale(1);
-        opacity: 0;
+        transform: rotate(360deg);
     }
 }
