--- a/src/partials/pop-up.html
+++ b/src/partials/pop-up.html
@@ -12,16 +12,22 @@
           <h3 class="book-title"></h3>
           <h4 class="book-author"></h4>
           <p class="book-description"></p>
-          <div class="book-store-logos">
-            <svg class="amazon-logo">
-              <use href=""></use>
-            </svg>
-            <svg class="second-logo">
-              <use href=""></use>
-            </svg>
-            <svg class="third-logo">
-              <use href=""></use>
-            </svg>
+          <div class="book-store-links">
+            <a class="book-store-link" href="">
+              <svg class="amazon-logo">
+                <use href=""></use>
+              </svg>
+            </a>
+            <a class="book-store-link" href="">
+              <svg class="second-logo">
+                <use href=""></use>
+              </svg>
+            </a>
+            <a  class="book-store-link" href="">
+              <svg class="third-logo">
+                <use href=""></use>
+              </svg>
+            </a>
           </div>
         </div>
         <button class="add-to-list-button" type="button">ADD TO SHOPING LIST</button>
