--- a/src/partials/all-books.html
+++ b/src/partials/all-books.html
@@ -1,5 +1,6 @@
 <section class="section">
   <div class="">
+    <span class="loader"></span>
     <div class="js-books"></div>
   </div>
 </section>
