--- a/src/partials/pop-up.html
+++ b/src/partials/pop-up.html
@@ -1,5 +1,6 @@
 <section class="section">
   <div class="container">
+    <span class="loader"></span>
     <p>Я книга. Удали p перед началом работы)</p>
   </div>
 </section>
