--- a/src/partials/support.html
+++ b/src/partials/support.html
@@ -1,5 +1,6 @@
 <section class="section">
-  <div class="">
+  <span class="loader"></span>
+  <div class="support-container">
     <p>Я Суппорт. Удали p перед началом работы)</p>
   </div>
 </section>
