--- a/src/css/all-categories.css
+++ b/src/css/all-categories.css
@@ -10,6 +10,9 @@
   width: 335px;
   height: 228px;
   overflow-y: scroll;
+  scroll-behavior: smooth;
+  scrollbar-color: #E0E0E0;
+  scrollbar-width: 8px;
   display: flex;
   flex-direction: column;
 }
