--- a/src/css/common.css
+++ b/src/css/common.css
@@ -49,9 +49,9 @@ html {
     scroll-behavior: smooth;
 }
 
-:root{
+/* :root{
     --timing-function: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+} */
 .hidden {
     position: absolute;
     white-space: nowrap;
