--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -19,7 +19,7 @@
               href="./shopping-list.html"
               data-action="shopping-list"
               >Shopping list
-              <svg class="shopping-bag" width="20" height="20">
+              <svg class="shopping-bag swg" width="20" height="20">
                 <use href="./images/sprite.svg#icon-shop"></use>
               </svg>
             </a>
