--- a/src/partials/shoplist.html
+++ b/src/partials/shoplist.html
@@ -1,5 +1,6 @@
 <section class="section">
   <div class="">
+    <span class="loader"></span>
     <p>Я корзина с книгами. Удали p перед началом работы)</p>
   </div>
 </section>
