--- a/src/partials/all-books.html
+++ b/src/partials/all-books.html
@@ -1,6 +1,7 @@
 <section class="section">
   <div class="">
     <span class="loader"></span>
+    <h1 class="best-sellers">Best Sellers Books</h1>
     <div class="js-books"></div>
   </div>
 </section>
