--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -8,7 +8,7 @@
         ></a>
       </li>
 
-      <div class="mob-hidden main-nav-block">
+      <li class="mob-hidden main-nav-block">
         <ul class="site-nav">
           <li class="item">
             <a class="nav-link" href="./index.html" data-action="index">Home</a>
@@ -25,7 +25,7 @@
             </a>
           </li>
         </ul>
-      </div>
+      </li>
 
       <li class="nav-item">
         <label class="switch">
