--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,9 +2,12 @@
   <nav class="nav">
     <ul class="nav-list nav-container">
       <li class="nav-item">
-        <a href="./index.html">
-          <svg class="" width="99" height="24">
-            <use href="./images/sprite.svg#icon-logo-light"></use></svg
+        <a class="main-logo" href="./index.html">
+          <svg width="24" height="24">
+            <use href="./images/sprite.svg#icon-logo"></use>
+          </svg>
+          <svg class="logo-bookshelf" width="77" height="13">
+            <use href="./images/sprite.svg#icon-bookshelf"></use></svg
         ></a>
       </li>
 
