--- a/src/partials/pop-up.html
+++ b/src/partials/pop-up.html
@@ -13,20 +13,14 @@
           <h4 class="book-author"></h4>
           <p class="book-description"></p>
           <div class="book-store-links">
-            <a class="book-store-link" href="">
-              <svg class="amazon-logo">
-                <use href=""></use>
-              </svg>
+            <a class="amazon-link" href="" target="_self">
+              <img srcset="../images/amazon-1x-min.png 1x, ../images/amazon-2x-min.png 2x" src="../images/amazon-1x-min.png" alt="Amazon Logo">
             </a>
-            <a class="book-store-link" href="">
-              <svg class="second-logo">
-                <use href=""></use>
-              </svg>
+            <a class="bookshop-link" href="" target="_self">
+              <img srcset="../images/bookshop-1x-min.png 1x, ../images/bookshop-2x-min.png 2x" src="../images/bookshop-1x-min.png" alt="Bookshop Logo">
             </a>
-            <a  class="book-store-link" href="">
-              <svg class="third-logo">
-                <use href=""></use>
-              </svg>
+            <a  class="openbook-link" href="" target="_self">
+              <img srcset="../images/openbook-1x-min.png 1x, ../images/openbook-2x-min.png 2x" src="../images/openbook-1x-min.png" alt="Openbook Logo">
             </a>
           </div>
         </div>
