--- a/src/partials/modal-menu.html
+++ b/src/partials/modal-menu.html
@@ -1,8 +1,40 @@
-<section class="section">
-  <div class="container">
-    <p>
-      Я модальное окно меню хедера в мобайл версии. Удали p перед началом
-      работы)
-    </p>
+<div id="burger-menu" class="burger-menu">
+  <nav class="nav-menu">
+    <ul class="nav-list-menu nav-container-menu">
+      <li class="nav-item-menu">
+        <svg class="" width="99" height="24">
+          <use href="./images/sprite.svg#icon-logo-light"></use>
+        </svg>
+      </li>
+
+      <div class="mob-hidden main-nav-block">
+        <ul class="site-nav-menu"></ul>
+      </div>
+      <li class="nav-item-menu switch-burger">
+        <label class="switch">
+          <input type="checkbox" />
+          <span class="slider round"></span>
+        </label>
+        <svg class="nav-burger" width="28" height="28">
+          <use href="./images/sprite.svg#icon-x-close"></use>
+        </svg>
+      </li>
+    </ul>
+  </nav>
+  <div class="menu-main-part">
+    <p class="menu-name">Stephen</p>
+    <div class="menu-nav-main">
+      <a class="name-menu-home" href="./index.html" data-action="index">Home</a>
+      <a
+        class="nav-link-menu"
+        href="./shopping-list.html"
+        data-action="shopping-list"
+        >Shopping list
+        <svg class="shopping-bag-menu swg" width="20" height="20">
+          <use href="./images/sprite.svg#icon-shop"></use>
+        </svg>
+      </a>
+    </div>
+    <button class="logout-button" type="button">Log out</button>
   </div>
-</section>
+</div>
