--- a/src/css/all-books.css
+++ b/src/css/all-books.css
@@ -3,6 +3,9 @@
   font-weight: 700;
   margin-bottom: 40px;
 }
+.title-color{
+  color: #4F2EE8;
+}
 .topbook-title{
   color: #B4AFAF;
   margin-bottom: 18px;
