--- a/src/partials/all-books.html
+++ b/src/partials/all-books.html
@@ -1,7 +1,9 @@
 <section class="section">
   <div class="">
     <span class="loader"></span>
-    <h1 class="best-sellers">Best Sellers Books</h1>
+    <h1 class="best-sellers">
+      Best Sellers <span class="title-color">Books</span>
+    </h1>
     <div class="js-books"></div>
   </div>
 </section>
