--- a/src/partials/shoplist.html
+++ b/src/partials/shoplist.html
@@ -1,5 +1,6 @@
 <section class="section">
   <div class="">
+    <h1 class="best-sellers">Shopping <span class="title-color">List</span></h1>
     <span class="loader"></span>
     <p>Я корзина с книгами. Удали p перед началом работы)</p>
   </div>
