add div for top-books block, add func for show and hide loader, fis loader in bloks categories and books

--- a/src/partials/all-books.html
+++ b/src/partials/all-books.html
@@ -1,6 +1,6 @@
 <section class="section">
-  <div class="">
-    <span class="loader"></span>
+  <div class="books">
+    <span class="loader hidden"></span>
     <h1 class="best-sellers">
       Best Sellers <span class="title-color">Books</span>
     </h1>
