--- a/src/partials/all-categories.html
+++ b/src/partials/all-categories.html
@@ -1,5 +1,5 @@
 <section class="section">
-  <div class="">
+  <div class="categories">
     <span class="loader"></span>
     <div class="js-category-block"></div>
   </div>
