--- a/src/css/common.css
+++ b/src/css/common.css
@@ -50,7 +50,7 @@ html {
 }
 
 /* :root{
-    --timing-function: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    --
 } */
 .hidden {
     position: absolute;
