--- a/src/partials/shoplist.html
+++ b/src/partials/shoplist.html
@@ -1,7 +1,7 @@
 <section class="section">
   <div class="">
     <h1 class="best-sellers">Shopping <span class="title-color">List</span></h1>
-    <span class="loader"></span>
+    <p class="loader hidden"></p>
     <div class="empty-shopping-list-img">
       <p class="empty-shopping-list-msg">
         This page is empty, add some books and proceed to order.
