add sprite code

--- a/src/css/common.css
+++ b/src/css/common.css
@@ -72,7 +72,7 @@ html {
     border: 3px solid #FFF;
     border-radius: 50%;
     display: inline-block;
-    position: relative;
+    position: absolute;
     box-sizing: border-box;
     animation: rotation 1s linear infinite;
 }
