--- a/src/css/support.css
+++ b/src/css/support.css
@@ -43,7 +43,7 @@
 .support-image{
   height: 42px;
   color:#ffffff;
-  filter: brightness()invert(1);
+  filter: brightness(0)invert(1);
 }
 
 .scroll-btn{
