Update Pop-up Files

--- a/src/partials/pop-up.html
+++ b/src/partials/pop-up.html
@@ -4,23 +4,23 @@
       <div class="popup-modal">
         <button class="popup-modal-close-button" type="button">
           <svg>
-            <use href="../images/sprite.svg#icon-x-close"></use>
+            <use href="./images/sprite.svg#icon-x-close"></use>
           </svg>
         </button>
-        <img class="book-image" src="" alt="">
+        <img class="book-image">
         <div class="book-information">
           <h3 class="book-title"></h3>
           <h4 class="book-author"></h4>
           <p class="book-description"></p>
           <div class="book-store-links">
-            <a class="amazon-link" href="" target="_self">
-              <img srcset="../images/amazon-1x-min.png 1x, ../images/amazon-2x-min.png 2x" src="../images/amazon-1x-min.png" alt="Amazon Logo">
+            <a class="amazon-link" target="_self">
+              <img srcset="./images/amazon-1x-min.png 1x, ./images/amazon-2x-min.png 2x" src="./images/amazon-1x-min.png" alt="Amazon Logo">
             </a>
-            <a class="bookshop-link" href="" target="_self">
-              <img srcset="../images/bookshop-1x-min.png 1x, ../images/bookshop-2x-min.png 2x" src="../images/bookshop-1x-min.png" alt="Bookshop Logo">
+            <a class="bookshop-link" target="_self">
+              <img srcset="./images/bookshop-1x-min.png 1x, ./images/bookshop-2x-min.png 2x" src="./images/bookshop-1x-min.png" alt="Bookshop Logo">
             </a>
-            <a  class="openbook-link" href="" target="_self">
-              <img srcset="../images/openbook-1x-min.png 1x, ../images/openbook-2x-min.png 2x" src="../images/openbook-1x-min.png" alt="Openbook Logo">
+            <a  class="openbook-link" target="_self">
+              <img srcset="./images/openbook-1x-min.png 1x, ./images/openbook-2x-min.png 2x" src="./images/openbook-1x-min.png" alt="Openbook Logo">
             </a>
           </div>
         </div>
