--- a/src/css/modal-menu.css
+++ b/src/css/modal-menu.css
@@ -43,6 +43,9 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  position: relative;
+  top: -8px;
+  z-index: -2;
 }
 
 .menu-name {
@@ -123,11 +126,31 @@
   height: 48px;
   flex-shrink: 0;
   position: absolute;
-  bottom: 0;
+  bottom: 54px;
   left: 0;
   margin: 20px;
+  display: flex;
+  align-items: center;
+  padding-left: 24px;
+  z-index: 2;
 }
-
+.logout-container {
+  display: flex;
+  align-items: center;
+  gap: 4px;
+  flex-wrap: nowrap;
+  padding: 24px 15px;
+}
+.swg-shopping {
+  fill: white;
+}
+.overlay-image {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  z-index: 1;
+}
 /* @media screen and (min-width: 768px) {
   .menu-main-part {
     display: none;
