change css btn see more

--- a/src/partials/all-books.html
+++ b/src/partials/all-books.html
@@ -4,6 +4,7 @@
     <h1 class="best-sellers">
       Best Sellers <span class="title-color">Books</span>
     </h1>
+    <span class="loader hidden"></span>
     <div class="js-books"></div>
   </div>
 </section>
