--- a/src/partials/all-books.html
+++ b/src/partials/all-books.html
@@ -1,10 +1,9 @@
 <section class="section">
   <div class="books">
-    <span class="loader hidden"></span>
     <h1 class="best-sellers">
       Best Sellers <span class="title-color">Books</span>
     </h1>
-    <span class="loader hidden"></span>
+    <p class="loader hidden"></p>
     <div class="js-books"></div>
   </div>
 </section>
