--- a/src/partials/pop-up.html
+++ b/src/partials/pop-up.html
@@ -19,7 +19,7 @@
             <a class="bookshop-link" target="_self">
               <img srcset="./images/bookshop-1x-min.png 1x, ./images/bookshop-2x-min.png 2x" src="./images/bookshop-1x-min.png" alt="Bookshop Logo">
             </a>
-            <a  class="openbook-link" target="_self">
+            <a  class="applebooks-link" target="_self">
               <img srcset="./images/openbook-1x-min.png 1x, ./images/openbook-2x-min.png 2x" src="./images/openbook-1x-min.png" alt="Openbook Logo">
             </a>
           </div>
