--- a/src/partials/support.html
+++ b/src/partials/support.html
@@ -1,15 +1,16 @@
-
 <section class="support">
   <div class="container-support">
-    <h1 class="support-section-title">Support Ukraine</h1>
-    <img
-      class="ukraine-emblem"
-      srcset="./images/support10.png 1x, ./images/support10-2x.png 2x"
-      src="./images/support10.png"
-      alt="UkraineEmblem"
-      width="20px"
-      height="32px"
-    />
+    <div class="support-title-div">
+      <h1 class="support-section-title">Support Ukraine</h1>
+      <img
+        class="ukraine-emblem"
+        srcset="./images/support10.png 1x, ./images/support10-2x.png 2x"
+        src="./images/support10.png"
+        alt="UkraineEmblem"
+        width="20px"
+        height="32px"
+      />
+    </div>
     <ul class="donation-organisation-list"></ul>
     <button class="scroll-btn">
       <img
@@ -25,4 +26,3 @@
     </button>
   </div>
 </section>
-
