--- a/src/css/support.css
+++ b/src/css/support.css
@@ -1,9 +1,9 @@
 .container-support{
   display: flex;
   flex-direction: column;
-  width: 356px;
-  height: 490px;
-  padding: 40px;
+  width: 335px;
+  height: 352px;
+  /* padding: 40px; */
   border-radius: 16px;
   background: rgb(79, 46, 232);
   background: linear-gradient(180deg, rgba(79, 46, 232, 1) 0%, rgba(255, 255, 255, 1) 130%);
@@ -16,13 +16,15 @@
     letter-spacing: -0.04em;
     color:white;
     text-align:center;
-    margin-bottom:40px;
+    margin-bottom: 16px;
 }
 
 .donation-organisation-list{
   max-height: 200px;
   overflow: hidden;
-  margin-bottom: 40px;
+  margin-bottom: 16px;
+  margin-left: 40px;
+  margin-top: 40px;
 }
 
 .support-item{
@@ -49,15 +51,20 @@
   border: none;
   background: transparent;
   align-self: center;
+  margin-bottom: 20px;
 }
 
-.support{
+.support-title-div{
   display: flex;
-  justify-content: center;
+  margin-top: 24px;
+  margin-left: 40px;
+  
 }
 
 .ukraine-emblem{
- 
+ width: 20px;
+ height: 32px;
+ margin-left: 12px;
 }
 
 .hidden-scroll-support{
