--- a/src/partials/support.html
+++ b/src/partials/support.html
@@ -13,16 +13,12 @@
     </div>
     <ul class="donation-organisation-list"></ul>
     <button class="scroll-btn">
-      <img
-        class="scroll-img-down"
-        src="./images/slider.png"
-        alt="slider-down"
-      />
-      <img
-        class="scroll-img-up hidden-scroll-support"
-        src="./images/slider-up.png"
-        alt="slider-up"
-      />
+      <svg class="scroll-img-down">
+        <use href="./images/sprite.svg#icon-slider"></use>
+      </svg>
+      <svg class="scroll-img-up hidden-scroll-support">
+        <use href="./images/sprite.svg#icon-up"></use>
+      </svg>
     </button>
   </div>
 </section>
