--- a/src/css/support.css
+++ b/src/css/support.css
@@ -3,7 +3,6 @@
   flex-direction: column;
   width: 335px;
   height: 352px;
-  /* padding: 40px; */
   border-radius: 16px;
   background: rgb(79, 46, 232);
   background: linear-gradient(180deg, rgba(79, 46, 232, 1) 0%, rgba(255, 255, 255, 1) 130%);
@@ -16,11 +15,9 @@
     letter-spacing: -0.04em;
     color:white;
     text-align:center;
-    margin-bottom: 16px;
 }
 
 .donation-organisation-list{
-  max-height: 200px;
   overflow: hidden;
   margin-bottom: 16px;
   margin-left: 40px;
@@ -31,6 +28,9 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+}
+.support-item:not(:last-child) {
+  margin-bottom: 10px;
 }
 
 .support-item-number{
@@ -49,7 +49,17 @@
 }
 
 .scroll-btn{
-  width: 40px;
+  width: 32px;
+  height: 32px;
+  border: none;
+  background: transparent;
+  align-self: center;
+  margin-bottom: 20px;
+}
+
+.scroll-img-down,.scroll-img-up{
+  width: 32px;
+  height: 32px;
   border: none;
   background: transparent;
   align-self: center;
@@ -73,9 +83,36 @@
   display: none;
 }
 
-@media screen and (min-width: 1440px) {
+@media screen and (min-width: 768px) {
   .container-support {
-    width: 356px;
+    height: 472px;
+  }
+  .support-title-div {
+    margin-top: 16px;
+  }
+  .support-item:not(:last-child) {
+    margin-bottom: 20px;
+  }
+  .scroll-btn {
+    width: 38px;
+    height: 38px;
+    margin-bottom: 14px;
+  }
+  .donation-organisation-list{
+    margin-bottom: 32px;
   }
 }
 
+@media screen and (min-width: 1440px) {
+  .container-support {
+    width: 356px;
+    height: 490px;
+  }
+
+  .donation-organisation-list{
+    margin-bottom: 40px;
+  }
+  .scroll-btn {
+    margin-bottom: 24px;
+  }
+}
