--- a/src/css/pop-up.css
+++ b/src/css/pop-up.css
@@ -16,13 +16,91 @@
     align-items: center;
     background: rgba(17, 17, 17, 0.40);
 }
-
+.popup-modal{
+    position: relative;
+    width: 335px;
+    height: 762px;
+    padding: 40px 24px;
+    padding-top: 41px;
+    background-color: #FFFFFF;
+    border-radius: 18px;
+    border: 1px solid;
+    border-color: #111111;
+}
 .popup-modal-close-button {
-    height: 20px;
-    width: 20px;
+    position: absolute;
+    right: 12px;
+    top: 12px;
+    border: none;
+    background-color: inherit;
+    margin-bottom: 4px;
 }
 
 .popup-modal-close-button svg {
     height: 100%;
     width: 100%;
+}
+.book-image{
+    width: 287px;
+    height: 408px;
+    border-radius: 8px;
+    border: none;
+}
+.book-info-container{
+    display: flex;
+    flex-direction: column;
+    gap: 14px;
+}
+.book-title{
+    font-size: 16px;
+    font-weight: 700;
+    margin-bottom: 4px;
+}
+.book-author {
+    font-size: 12px;
+    font-style: italic;
+    font-weight: 400;
+    color: #B4AFAF;
+    margin-bottom: 18px;
+}
+.book-description{
+    margin-bottom: 14px;
+}
+.book-store-links{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 20px;
+    margin-bottom: 40px;
+    width: 173px;
+    height: 36px;
+}
+/* .change-color{
+    color: #ffffff;
+    filter: brightness()invert(1);
+} */
+.button-center{
+    display: flex;
+    justify-content: center;
+}
+.add-to-list-button{
+    height: 46px;
+    width: auto;
+    border: 2px solid;
+    border-radius: 40px;
+    border-color: #4F2EE8;
+    background-color: inherit;
+    padding: 14px 28px;
+}
+.button-popup-text{
+    font-weight: 700;
+    color: inherit;
+}
+
+@media screen and (min-width: 768px){
+
+}
+
+@media screen and (min-width: 1440px){
+
 }
