--- a/src/css/pop-up.css
+++ b/src/css/pop-up.css
@@ -105,8 +105,42 @@
     height: 465px;
     padding: 40px;
  }
+    .popup-modal-close-button {
+    right: 24px;
+    top: 24px;
+    width: 28px;
+    height: 28px;
+}
+.book-image {
+    width: 192px;
+    height: 281px;
+}
+.book-info-container {
+    flex-direction: row;
+    gap: 24px;
+    margin-bottom: 40px;
+}
+.book-title {
+    font-size: 24px;
+    margin-bottom: 8px;
 }
 
-@media screen and (min-width: 1440px){
+.book-author {
+    font-size: 14px;
+    margin-bottom: 20px;
+}
 
+.book-description {
+    margin-bottom: 20px;
+}
+
+.add-to-list-button {
+    height: 64px;
+    width: 100%;
+    padding: 20px 20px;
+}
+
+.button-popup-text {
+   font-size: 18px;
+}
 }
