--- a/src/partials/shoplist.html
+++ b/src/partials/shoplist.html
@@ -2,7 +2,7 @@
   <div class="">
     <h1 class="best-sellers">Shopping <span class="title-color">List</span></h1>
     <p class="loader hidden"></p>
-    <div class="empty-shopping-list-img">
+    <div class="empty-shopping-list">
       <p class="empty-shopping-list-msg">
         This page is empty, add some books and proceed to order.
       </p>
