change burger menu add photo and change sprite

--- a/src/partials/modal-menu.html
+++ b/src/partials/modal-menu.html
@@ -53,7 +53,7 @@
         Log out
         <span class="shopping-bag swg">
           <svg width="20" height="20">
-            <use href="./images/sprite.svg#icon-x-close"></use>
+            <use href="./images/sprite.svg#icon-arrow-narrow-right"></use>
           </svg>
         </span>
       </button>
